Handle invalid screens

Fix a rare crash when WEView is stuck on an
invalid (disconnected) display.
While being on this display we send invalid
screen infos to chromium casuing problems later.
Try to send the defaults instead.

Fixes: QTBUG-136481
Change-Id: Id014148d71fbe559a174eabb056f3e19b367ab25
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 4285358b4e438682eeab10ad042b3f35be945f63)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>